--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
