--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evbatteryreuse",
+  "name": "ecommerce-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "@radix-ui/react-popover": "^1.1.15",
+    "antd": "^5.28.0",
     "axios": "^1.12.2",
     "motion": "^12.23.22",
     "react": "^19.1.1",
